Fix spacing

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,11 +5,13 @@
   @include bar;
   align-items: flex-end;
   flex-wrap: wrap;
+  margin-top: 0;
   @supports (padding-bottom: env(safe-area-inset-bottom)) {
     padding-bottom: calc(var(--safe-area-inset-bottom) + var(--spacer));
   }
   @include medium {
     margin: var(--spacer);
+    margin-top: 0;
     @supports (margin-bottom: env(safe-area-inset-bottom)) {
       margin-bottom: calc(var(--safe-area-inset-bottom) + var(--spacer));
     }
