--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,5 +12,6 @@
     position: sticky;
     top: var(--spacer);
     margin: var(--spacer);
+    margin-bottom: 0;
   }
 }
